Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76565

BLE pairing with pin code fails on Android because Qt does not ask for the pin code but generates a random one

XMLWordPrintable

    • Android
    • 263fc5186325a7dd59a7533b98b3bf1296ea0d16 (qt/qtconnectivity/5.12)

      We have BLE devices that report their pairing capabilities as DisplayOnly (and legacy pairing only). With a phone reporting its pairing capability (usually) as KeyboardDisplay, this will cause the phone to ask for a pin code which has to match the pincode the device is showing. Since commit f8c0572ddcd / Change-Id: I618242da415574245e5a213a6e34f190c685c8e9, Qt will generate a pincode itself and provide that to Android, while in this case it should really ask the application/user for the pin code. Because the generated pincode will not match the pincode the device is showing, the pairing fails (and in the case of our devices, the connection is dropped).

      Previously, Qt would not handle this type of pairing and Android would show a pin code entry form and handle the pairing.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ablasche Alex Blasche
            ThiemoVanEngelen Thiemo van Engelen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes